# riemann-debruijn-lab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  mathematical_claim_review.md  reproducibility_issue.md
data/: provenance.json
data/processed/candidate_comparison/: gap_energy_flow_candidate_summary.csv  gap_energy_flow_radius_summary.csv
docs/: current_results.md  data_provenance.md  explicit_tail_audit.md  limitations.md  mathematical_background.md  project_log.md  references.md  release_checklist.md  repository_audit.md  roadmap.md
notebooks/: 01_robin_lagarias.ipynb  02_lehmer_pairs.ipynb  03_tail_certification.ipynb  04_gap_energy_flow.ipynb  candidate_comparison_demo.ipynb
outputs/candidate_comparison/: candidate_comparison.csv  report.md
outputs/reproduction/: consolidated_reproduction_report.md
outputs/reproduction/cert_1e12/: report.md  tail_assumptions.csv  tail_estimate_bins.csv  tail_estimate_summary.csv
outputs/reproduction/energy_1e12/: gap_energy.csv  report.md
outputs/reproduction/flow_1e12/: finite_flow.csv  report.md
outputs/reproduction/lehmer_1e12/: lehmer_candidates.csv  report.md
outputs/reproduction/source_reports/: lehmer_index_report.txt  (+5 more)
scripts/: build_reproduction_report.py  check_claim_language.py  reproduce_gap_energy.py  reproduce_lehmer_scan.py  reproduce_rh_lab.py  reproduce_tail_cert.py
src/riemann_lab/: __init__.py  cli.py  config.py  constants.py  logging_utils.py
tests/: test_candidate_comparison.py  test_claim_language.py  test_cli.py  test_lehmer_index.py  test_offsets.py  test_reports.py  test_robin.py  test_tail_bounds.py  test_uncertainty.py
(+44 files in other folders)
