[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riemann-debruijn-lab"
version = "0.1.0"
description = "Honest computational laboratory for zeta zeros, Lehmer pairs, de Bruijn-Newman experiments, and RH-equivalent criteria."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Riemann de Bruijn Lab Contributors" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "mpmath>=1.3",
  "matplotlib>=3.7"
]
keywords = [
  "riemann-hypothesis",
  "de-bruijn-newman",
  "zeta-zeros",
  "lehmer-pairs",
  "computational-number-theory",
  "reproducibility"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/caramaschiHG/riemann-debruijn-lab"
Repository = "https://github.com/caramaschiHG/riemann-debruijn-lab"
Issues = "https://github.com/caramaschiHG/riemann-debruijn-lab/issues"
Documentation = "https://github.com/caramaschiHG/riemann-debruijn-lab/blob/main/README.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
riemann-lab = "riemann_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "artifacts",
  "outputs",
  "notebooks"
]
